test/importers/invalid/csv_string_reserved_column_name_importer.rb
require 'csv_party'

class CsvStringReservedColumnNameImporter < CSVParty::Importer
  column :csv_string
end
